# python-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ci/: README.md  mypy.sh  pytest.sh
docs/: Makefile
docs/source/: conf.py  index.md  index.rst  scripts.md
docs/source/scripts/: example_01.rst  example_02.rst  scripts.rst
docs/source/template/: template.colors.blue.rst  template.colors.red.rst  template.colors.rst  template.rst  template.square.rst  template.trainer.rst
scripts/: __init__.py  example_01.py  example_02.py
template/: __init__.py  square.py  trainer.py
template/colors/: __init__.py  blue.py  red.py
tests/: test_architectures.py
