[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["G. Arampatzis <gtarabat@gmail.com>"]
description = ""
name = "template"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "v1.26.4"
pre-commit = "^4.0.1"
pretty-errors = "^1.2.25"
python = "^3.10"
torch = "2.2.2"
wandb = "^0.18.3"

[tool.poetry.scripts]
example_01 = "scripts.example_01:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # pydocstyle
  "D104",
  "D105",
  "D107",
  "D203",
  "D205",
  "D212",
  "D400",
  "D404",
  "D415",
  # pylint
  "PLR0913",
  "PLR0915",
  # ruff
  "RUF001",
  "RUF015",
  # flake8-bandit
  "S101",
  "S102",
  "S602",
  "S603",
  "S604",
  # mccabe
  "C90",
  # flake8-anootations
  "ANN",
  # flake8-commas
  "COM819",
  #
  "PD901",
  "PERF203",
  "A002",
  "A003",
  "PTH",
  "FBT",
  "DTZ",
  "EM",
  "FA100",
  "T201",
  "TRY003",
  "ISC001",
  "N806"
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
