[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "(sandbox|docs)(/|\\|$)"
python_version = "3.10"

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
exclude = [
  './sandbox/*.py$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.poetry]
authors = ["G. Arampatzis <georgios.arampatzis@uoc.gr>"]
description = ""
name = "template"
packages = [
  {include = "template"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "v1.26.4"
pre-commit = "^4.0.1"
pretty-errors = "^1.2.25"
python = "^3.10"
torch = "2.2.2"
wandb = "^0.18.3"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
mypy = "^1.12.0"
pytest = "^8.3.3"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.1"
numpydoc = "^1.8.0"
sphinx = "^8.1.3"
sphinx-math-dollar = "^1.2.1"
sphinx-rtd-theme = "^3.0.1"

[tool.poetry.scripts]
example_01 = "scripts.example_01:main"

[tool.ruff]
exclude = ["docs"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # pylint
  "PLR0913",
  "PLR0915",
  "PLR2004",
  # ruff
  "RUF001",
  # flake8-bandit
  "S101",
  "S102",
  "S602",
  "S603",
  "S604",
  # flake8-annotations
  "ANN",
  # flake8-commas
  "COM819",
  "COM812",
  #
  "NPY002",
  "B027",
  "PD901",
  "PD011",
  "PERF203",
  "A002",
  "A003",
  "PTH",
  "FBT",
  "DTZ",
  "EM",
  "FA100",
  "T201",
  "TRY003",
  "ISC001",
  "N806",
  "N803",
  "SLF001"
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
